Fix: FileExtension on dataframe to csv

--- a/eval_weac_over_layers.ipynb
+++ b/eval_weac_over_layers.ipynb
@@ -6182,7 +6182,8 @@
     "        crit_plots_fig = criticality_plots(weaklayer, layers, dataframe)\n",
     "        crit_hm_fig = criticality_heatmap(weaklayer, layers, dataframe)\n",
     "        combine_plots(plots_path, os.path.basename(file_path), [crit_plots_fig, snow_profile_fig, crit_hm_fig])\n",
-    "        dataframe.to_csv(os.path.join(criteria_data_path, os.path.basename(file_path)), index=False)\n",
+    "        base, _ = os.path.splitext(os.path.basename(file_path))\n",
+    "        dataframe.to_csv(os.path.join(criteria_data_path, base + \".csv\"), index=False)\n",
     "    except Exception as e:\n",
     "        error_paths.append(file_path)\n",
     "        print(f\"Error processing file {file_path}: {e}\")\n",
