--- a/eval_average_density_profile.ipynb
+++ b/eval_average_density_profile.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "76ed3801",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Auto reload modules\n",
     "%load_ext autoreload\n",
@@ -23,17 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "id": "6bc8a38c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
     "from typing import List\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import copy\n",
     "from tqdm.notebook import tqdm\n",
+    "\n",
+    "sys.path.append(\"/home/pillowbeast/Documents/weac\")\n",
     "\n",
     "from weac.analysis import CriteriaEvaluator, CoupledCriterionResult, SSERRResult\n",
     "from weac.core.system_model import SystemModel\n",
@@ -43,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "b7274bcc",
    "metadata": {},
    "outputs": [
@@ -80,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "60d55eaf",
    "metadata": {},
    "outputs": [
@@ -297,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "6ede241f",
    "metadata": {},
    "outputs": [
@@ -401,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "95b1e1d2",
    "metadata": {},
    "outputs": [],
@@ -424,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "884eaeb3",
    "metadata": {},
    "outputs": [],
@@ -471,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "f2310c60",
    "metadata": {},
    "outputs": [
@@ -570,7 +564,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "weac",
+   "display_name": "layerwise",
    "language": "python",
    "name": "python3"
   },
@@ -584,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
