--- a/eval_weac_over_layers.ipynb
+++ b/eval_weac_over_layers.ipynb
@@ -44,10 +44,13 @@
     "import os\n",
     "from typing import List\n",
     "import copy\n",
+    "import sys\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm.notebook import tqdm\n",
+    "\n",
+    "sys.path.append(\"/home/pillowbeast/Documents/weac\")\n",
     "\n",
     "from weac.analysis import CriteriaEvaluator, CoupledCriterionResult, SSERRResult\n",
     "from weac.core.system_model import SystemModel\n",
