--- a/eval_crown_flank_dataset.ipynb
+++ b/eval_crown_flank_dataset.ipynb
@@ -14,19 +14,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "fda4fdf9",
       "metadata": {},
       "outputs": [],
       "source": [
         "import os\n",
         "from typing import List\n",
-        "import numpy as np\n",
-        "from numpy.linalg import LinAlgError\n",
-        "import pandas as pd\n",
-        "from pprint import pprint\n",
         "import copy\n",
+        "import sys\n",
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
         "from tqdm.notebook import tqdm\n",
+        "\n",
+        "sys.path.append(\"/home/pillowbeast/Documents/weac\")\n",
         "\n",
         "from weac.analysis import Analyzer, CriteriaEvaluator, CoupledCriterionResult, SSERRResult\n",
         "from weac.core.system_model import SystemModel\n",
