--- a/eval_crown_flank_dataset.ipynb
+++ b/eval_crown_flank_dataset.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "id": "3bf64450",
       "metadata": {},
       "outputs": [],
@@ -22,13 +22,10 @@
         "import os\n",
         "from typing import List\n",
         "import copy\n",
-        "import sys\n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from tqdm.notebook import tqdm\n",
-        "\n",
-        "sys.path.append(\"/home/pillowbeast/Documents/weac\")\n",
         "\n",
         "from weac.analysis import Analyzer, CriteriaEvaluator, CoupledCriterionResult, SSERRResult\n",
         "from weac.core.system_model import SystemModel\n",
@@ -7133,7 +7130,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "weac",
+      "display_name": "layerwise",
       "language": "python",
       "name": "python3"
     },
